Fix: export only lives in the same RUN statement

--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -12,15 +12,12 @@ RUN apt-get update && apt-get install -y \
 	stlink-tools \
 	xz-utils curl
 
+# Get ARM Toolchain
 RUN if [ "$TARGETPLATFORM" = "linux/arm64" ]; then export ARM_ARCH=aarch64; \
     elif [ "$TARGETPLATFORM" = "linux/arm/v7" ]; then export ARM_ARCH=aarch64; \
     elif [ "$TARGETPLATFORM" = "linux/amd64" ]; then export ARM_ARCH=x86_64; \
-    fi
-
-RUN echo "https://developer.arm.com/-/media/Files/downloads/gnu/${ARM_VERSION}/binrel/arm-gnu-toolchain-${ARM_VERSION}-${ARM_ARCH}-arm-none-eabi.tar.xz"
-
-# Get ARM Toolchain
-RUN mkdir ${TOOLS_PATH} \
+    fi \
+	&& mkdir ${TOOLS_PATH} \
 	&& curl -Lo gcc-arm-none-eabi.tar.xz "https://developer.arm.com/-/media/Files/downloads/gnu/${ARM_VERSION}/binrel/arm-gnu-toolchain-${ARM_VERSION}-${ARM_ARCH}-arm-none-eabi.tar.xz" \
 	&& tar xf gcc-arm-none-eabi.tar.xz --strip-components=1 -C ${TOOLS_PATH} \
 	&& rm gcc-arm-none-eabi.tar.xz \
