--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -1,8 +1,11 @@
-FROM alpine:3.17.2
+FROM --platform=$BUILDPLATFORM alpine:3.17.2
 
 ARG TARGETPLATFORM
+ARG BUILDPLATFORM
 ARG TOOLS_PATH=/opt/gcc-arm-none-eabi
 ARG ARM_VERSION=12.2.rel1
+
+RUN echo "I am running on $BUILDPLATFORM, building for $TARGETPLATFORM" > /log
 
 # Prep basic packages to build STM32 CMake project
 RUN apk --no-cache add \
@@ -14,8 +17,6 @@ RUN apk --no-cache add \
 
 # Get ARM Toolchain
 RUN if [ "$TARGETPLATFORM" = "linux/arm64" ]; then export ARM_ARCH=aarch64; \
-    elif [ "$TARGETPLATFORM" = "linux/arm/v7" ]; then export ARM_ARCH=aarch64; \
-    elif [ "$TARGETPLATFORM" = "linux/arm/v6" ]; then export ARM_ARCH=aarch64; \
     elif [ "$TARGETPLATFORM" = "linux/amd64" ]; then export ARM_ARCH=x86_64; \
     fi \
 	&& mkdir ${TOOLS_PATH} \
