--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,14 @@ jobs:
       with:
         repository: jasonyang-ee/STM32-CMAKE-TEMPLATE
         path: project
+    
+    - name: Delete dangling image package
+      uses: actions/delete-package-versions@v4
+      with: 
+        package-name: 'stm32-builder'
+        package-type: 'container'
+        min-versions-to-keep: 0
+        delete-only-untagged-versions: 'true'
 
     - name: Login to Docker Hub
       uses: docker/login-action@v2
