--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -27,12 +27,9 @@ RUN if [ "$TARGETPLATFORM" = "linux/arm64" ]; then export ARM_ARCH=aarch64; \
 	&& rm -rf ${TOOLS_PATH}/share/doc \
 	&& echo "https://developer.arm.com/-/media/Files/downloads/gnu/${ARM_VERSION}/binrel/arm-gnu-toolchain-${ARM_VERSION}-${ARM_ARCH}-arm-none-eabi.tar.xz"
 
-# # Get static analysis tools: clang-format clang-tidy, Lizard, cpplint
-# RUN apt-get install -y \
-# 	clang-format clang-tidy \
-# 	python3 python3-pip \
-# 	&& pip install lizard cpplint \
-# 	&& apt-get clean
+# Get static analysis tools: clang-format clang-tidy, Lizard, cpplint
+RUN apt-get install -y \
+	clang-format clang-tidy
 
 # Add Toolchain to PATH
 ENV PATH="$PATH:${TOOLS_PATH}/bin"
