--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,7 +86,7 @@ jobs:
       with:
         context: .
         platforms: linux/amd64
-        file: ${{ github.workspace }}/Dockerfile.ubuntu
+        file: ${{ github.workspace }}/Dockerfile.debian
         load: true
         tags: test
 
@@ -96,7 +96,7 @@ jobs:
       with:
         context: .
         platforms: linux/arm64/v8
-        file: ${{ github.workspace }}/Dockerfile.ubuntu
+        file: ${{ github.workspace }}/Dockerfile.debian
         load: true
         tags: test
 
