Add: more remove and for repeatablility test

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,8 +27,8 @@ jobs:
     - name: free disk space
       run: |
         sudo swapoff -a
-        sudo rm -f /swapfile
-        sudo apt clean
+        sudo swapoff /swapfile
+        sudo rm -rf /swapfile /usr/share/dotnet /usr/local/lib/android /opt/ghc
         docker rmi $(docker image ls -aq)
         df -h
 
