--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -134,28 +134,28 @@ jobs:
         load: true
         tags: test
 
-    - name: Test Default
+    - name: Test Default amd64
       run: |
         docker run ${{ steps.output-ubuntu-amd64.outputs.imageid }}
         docker run ${{ steps.output-debian-amd64.outputs.imageid }}
         docker run ${{ steps.output-alpine-amd64.outputs.imageid }}
         docker run ${{ steps.output-arch.outputs.imageid }}
 
-    - name: Test --help
+    - name: Test --help amd64
       run: |
         docker run ${{ steps.output-ubuntu-amd64.outputs.imageid }} --help
         docker run ${{ steps.output-debian-amd64.outputs.imageid }} --help
         docker run ${{ steps.output-alpine-amd64.outputs.imageid }} --help
         docker run ${{ steps.output-arch.outputs.imageid }} --help
 
-    - name: Test URL
+    - name: Test URL amd64
       run: |
         docker run ${{ steps.output-ubuntu-amd64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
         docker run ${{ steps.output-debian-amd64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
         docker run ${{ steps.output-alpine-amd64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
         docker run ${{ steps.output-arch.outputs.imageid }} ${{ env.TEST_REPO_URL }}
 
-    - name: Test Volume
+    - name: Test Volume amd64
       run: |
         docker run -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-ubuntu-amd64.outputs.imageid }} /proj
         sudo rm -r ${{ github.workspace }}/project/build
@@ -165,9 +165,60 @@ jobs:
         sudo rm -r ${{ github.workspace }}/project/build
         docker run -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-arch.outputs.imageid }} /proj Debug
       
-    - name: Test Hybrid
+    - name: Test Hybrid amd64
       run: |
         docker run -v "${{ github.workspace }}/hybrid1":"/home" ${{ steps.output-ubuntu-amd64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
         docker run -v "${{ github.workspace }}/hybrid1":"/home" ${{ steps.output-debian-amd64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
         docker run -v "${{ github.workspace }}/hybrid2":"/home" ${{ steps.output-alpine-amd64.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
         docker run -v "${{ github.workspace }}/hybrid3":"/home" ${{ steps.output-arch.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
+
+    - name: Test Default arm64
+      run: |
+        docker run --platform linux/arm64/v8 ${{ steps.output-ubuntu-arm64.outputs.imageid }}
+        docker run --platform linux/arm64/v8 ${{ steps.output-debian-arm64.outputs.imageid }}
+        docker run --platform linux/arm64/v8 ${{ steps.output-alpine-arm64.outputs.imageid }}
+        docker run --platform linux/arm64/v8 ${{ steps.output-arch.outputs.imageid }}
+
+    - name: Test --help arm64
+      run: |
+        docker run --platform linux/arm64/v8 ${{ steps.output-ubuntu-arm64.outputs.imageid }} --help
+        docker run --platform linux/arm64/v8 ${{ steps.output-debian-arm64.outputs.imageid }} --help
+        docker run --platform linux/arm64/v8 ${{ steps.output-alpine-arm64.outputs.imageid }} --help
+        docker run --platform linux/arm64/v8 ${{ steps.output-arch.outputs.imageid }} --help
+
+    - name: Test URL arm64
+      run: |
+        docker run --platform linux/arm64/v8 ${{ steps.output-ubuntu-arm64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
+        docker run --platform linux/arm64/v8 ${{ steps.output-debian-arm64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
+        docker run --platform linux/arm64/v8 ${{ steps.output-alpine-arm64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
+        docker run --platform linux/arm64/v8 ${{ steps.output-arch.outputs.imageid }} ${{ env.TEST_REPO_URL }}
+
+    - name: Test Volume arm64
+      run: |
+        docker run --platform linux/arm64/v8 -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-ubuntu-arm64.outputs.imageid }} /proj
+        sudo rm -r ${{ github.workspace }}/project/build
+        docker run --platform linux/arm64/v8 -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-debian-arm64.outputs.imageid }} /proj
+        sudo rm -r ${{ github.workspace }}/project/build
+        docker run --platform linux/arm64/v8 -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-alpine-arm64.outputs.imageid }} /proj Debug
+        sudo rm -r ${{ github.workspace }}/project/build
+        docker run --platform linux/arm64/v8 -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-arch.outputs.imageid }} /proj Debug
+
+    - name: Test Hybrid arm64
+      run: |
+        docker run --platform linux/arm64/v8 -v "${{ github.workspace }}/hybrid1":"/home" ${{ steps.output-ubuntu-arm64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
+        docker run --platform linux/arm64/v8 -v "${{ github.workspace }}/hybrid1":"/home" ${{ steps.output-debian-arm64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
+        docker run --platform linux/arm64/v8 -v "${{ github.workspace }}/hybrid2":"/home" ${{ steps.output-alpine-arm64.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
+        docker run --platform linux/arm64/v8 -v "${{ github.workspace }}/hybrid3":"/home" ${{ steps.output-arch.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
+
+    - name: Delete dangling image package
+      uses: actions/delete-package-versions@v4
+      with: 
+        package-name: 'stm32-builder'
+        package-type: 'container'
+        min-versions-to-keep: 0
+        delete-only-untagged-versions: 'true'
+    
+    - name: free disk space from docker
+      run: |
+        docker rmi $(docker image ls -aq)
+        df -h
