--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,11 @@ jobs:
     permissions:
       contents: read
       packages: write
+    strategy:
+      fail-fast: true
+      matrix:
+        aarch: [amd64, arm64]
+        files: [ubuntu, debian, alpine, arch]
 
     steps:
     - name: free disk space from docker
@@ -65,8 +70,8 @@ jobs:
     - name: Set Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Build and Load for Ubuntu
-      id: output-ubuntu-amd64
+    - name: Build and Load
+      id: output-${{ matrix.files }}-${{ matrix.aarch }}
       uses: docker/build-push-action@v4
       with:
         context: .
@@ -136,62 +141,60 @@ jobs:
 
     - name: Test Default amd64
       run: |
-        docker run ${{ steps.output-ubuntu-amd64.outputs.imageid }}
-        docker run ${{ steps.output-debian-amd64.outputs.imageid }}
-        docker run ${{ steps.output-alpine-amd64.outputs.imageid }}
-        docker run ${{ steps.output-arch.outputs.imageid }}
+        docker run -rm ${{ steps.output-ubuntu-amd64.outputs.imageid }}
+        docker run -rm ${{ steps.output-debian-amd64.outputs.imageid }}
+        docker run -rm ${{ steps.output-alpine-amd64.outputs.imageid }}
+        docker run -rm ${{ steps.output-arch.outputs.imageid }}
 
     - name: Test --help amd64
       run: |
-        docker run ${{ steps.output-ubuntu-amd64.outputs.imageid }} --help
-        docker run ${{ steps.output-debian-amd64.outputs.imageid }} --help
-        docker run ${{ steps.output-alpine-amd64.outputs.imageid }} --help
-        docker run ${{ steps.output-arch.outputs.imageid }} --help
+        docker run -rm ${{ steps.output-ubuntu-amd64.outputs.imageid }} --help
+        docker run -rm ${{ steps.output-debian-amd64.outputs.imageid }} --help
+        docker run -rm ${{ steps.output-alpine-amd64.outputs.imageid }} --help
+        docker run -rm ${{ steps.output-arch.outputs.imageid }} --help
 
     - name: Test URL amd64
       run: |
-        docker run ${{ steps.output-ubuntu-amd64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
-        docker run ${{ steps.output-debian-amd64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
-        docker run ${{ steps.output-alpine-amd64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
-        docker run ${{ steps.output-arch.outputs.imageid }} ${{ env.TEST_REPO_URL }}
+        docker run -rm ${{ steps.output-ubuntu-amd64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
+        docker run -rm ${{ steps.output-debian-amd64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
+        docker run -rm ${{ steps.output-alpine-amd64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
+        docker run -rm ${{ steps.output-arch.outputs.imageid }} ${{ env.TEST_REPO_URL }}
 
     - name: Test Volume amd64
       run: |
-        docker run -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-ubuntu-amd64.outputs.imageid }} /proj
+        docker run -rm -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-ubuntu-amd64.outputs.imageid }} /proj
         sudo rm -r ${{ github.workspace }}/project/build
-        docker run -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-debian-amd64.outputs.imageid }} /proj
+        docker run -rm -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-debian-amd64.outputs.imageid }} /proj
         sudo rm -r ${{ github.workspace }}/project/build
-        docker run -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-alpine-amd64.outputs.imageid }} /proj Debug
+        docker run -rm -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-alpine-amd64.outputs.imageid }} /proj Debug
         sudo rm -r ${{ github.workspace }}/project/build
-        docker run -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-arch.outputs.imageid }} /proj Debug
+        docker run -rm -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-arch.outputs.imageid }} /proj Debug
       
     - name: Test Hybrid amd64
       run: |
-        docker run -v "${{ github.workspace }}/hybrid1":"/home" ${{ steps.output-ubuntu-amd64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
-        docker run -v "${{ github.workspace }}/hybrid1":"/home" ${{ steps.output-debian-amd64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
-        docker run -v "${{ github.workspace }}/hybrid2":"/home" ${{ steps.output-alpine-amd64.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
-        docker run -v "${{ github.workspace }}/hybrid3":"/home" ${{ steps.output-arch.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
+        docker run -rm -v "${{ github.workspace }}/hybrid1":"/home" ${{ steps.output-ubuntu-amd64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
+        docker run -rm -v "${{ github.workspace }}/hybrid1":"/home" ${{ steps.output-debian-amd64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
+        docker run -rm -v "${{ github.workspace }}/hybrid2":"/home" ${{ steps.output-alpine-amd64.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
+        docker run -rm -v "${{ github.workspace }}/hybrid3":"/home" ${{ steps.output-arch.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
 
     - name: Test Default arm64
       run: |
-        docker run --platform linux/arm64/v8 ${{ steps.output-ubuntu-arm64.outputs.imageid }}
-        docker run --platform linux/arm64/v8 ${{ steps.output-debian-arm64.outputs.imageid }}
-        docker run --platform linux/arm64/v8 ${{ steps.output-alpine-arm64.outputs.imageid }}
-        docker run --platform linux/arm64/v8 ${{ steps.output-arch.outputs.imageid }}
+        docker run -rm --platform linux/arm64/v8 ${{ steps.output-ubuntu-arm64.outputs.imageid }}
+        docker run -rm --platform linux/arm64/v8 ${{ steps.output-debian-arm64.outputs.imageid }}
+        docker run -rm --platform linux/arm64/v8 ${{ steps.output-alpine-arm64.outputs.imageid }}
+        docker run -rm --platform linux/arm64/v8 ${{ steps.output-arch.outputs.imageid }}
 
     - name: Test --help arm64
       run: |
-        docker run --platform linux/arm64/v8 ${{ steps.output-ubuntu-arm64.outputs.imageid }} --help
-        docker run --platform linux/arm64/v8 ${{ steps.output-debian-arm64.outputs.imageid }} --help
-        docker run --platform linux/arm64/v8 ${{ steps.output-alpine-arm64.outputs.imageid }} --help
-        docker run --platform linux/arm64/v8 ${{ steps.output-arch.outputs.imageid }} --help
+        docker run -rm --platform linux/arm64/v8 ${{ steps.output-ubuntu-arm64.outputs.imageid }} --help
+        docker run -rm --platform linux/arm64/v8 ${{ steps.output-debian-arm64.outputs.imageid }} --help
+        docker run -rm --platform linux/arm64/v8 ${{ steps.output-alpine-arm64.outputs.imageid }} --help
 
     - name: Test URL arm64
       run: |
         docker run --platform linux/arm64/v8 ${{ steps.output-ubuntu-arm64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
         docker run --platform linux/arm64/v8 ${{ steps.output-debian-arm64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
         docker run --platform linux/arm64/v8 ${{ steps.output-alpine-arm64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
-        docker run --platform linux/arm64/v8 ${{ steps.output-arch.outputs.imageid }} ${{ env.TEST_REPO_URL }}
 
     - name: Test Volume arm64
       run: |
@@ -200,15 +203,12 @@ jobs:
         docker run --platform linux/arm64/v8 -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-debian-arm64.outputs.imageid }} /proj
         sudo rm -r ${{ github.workspace }}/project/build
         docker run --platform linux/arm64/v8 -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-alpine-arm64.outputs.imageid }} /proj Debug
-        sudo rm -r ${{ github.workspace }}/project/build
-        docker run --platform linux/arm64/v8 -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-arch.outputs.imageid }} /proj Debug
 
     - name: Test Hybrid arm64
       run: |
         docker run --platform linux/arm64/v8 -v "${{ github.workspace }}/hybrid1":"/home" ${{ steps.output-ubuntu-arm64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
         docker run --platform linux/arm64/v8 -v "${{ github.workspace }}/hybrid1":"/home" ${{ steps.output-debian-arm64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
         docker run --platform linux/arm64/v8 -v "${{ github.workspace }}/hybrid2":"/home" ${{ steps.output-alpine-arm64.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
-        docker run --platform linux/arm64/v8 -v "${{ github.workspace }}/hybrid3":"/home" ${{ steps.output-arch.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
 
     - name: Delete dangling image package
       uses: actions/delete-package-versions@v4
